# gigr-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: pre-commit.yml
fastapi_langraph/: main.py  schemas.py
fastapi_langraph/agent/: agent.py  mcp_client.py
fastapi_langraph/agent/tools/: mock_search.py
fastapi_langraph/api/: routes.py
fastapi_langraph/api/routers/: chat.py  system.py  threads.py
fastapi_langraph/core/: config.py
fastapi_langraph/middleware/: logging.py
scripts/: chat.py
tests/middleware/: test_logging.py
