[tool.poetry]
name = "fastapi-langraph"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "fastapi_langraph"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
pydantic-settings = "^2.6.0"
python-dotenv = "^1.0.1"
langchain = "^0.3.0"
langchain-openai = "^0.2.0"
langgraph = "^0.4.5"
langchain-core = "^0.3.0"
loguru = "^0.7.2"
langchain-mcp-adapters = "^0.1.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-cov = "^6.0.0"
httpx = "^0.28.0"
pre-commit = "^4.0.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
